--- a/sidebars/c8-dist-workflow.textile
+++ b/sidebars/c8-dist-workflow.textile
@@ -1,5 +1,5 @@
 h3. Distributed Workflow Screencast
 
-This screencast demonstrates a distributed workflow.  It takes two personas, creating a project in GitHub and pushing to it in the first persona, then cloning that project in the second.  The second then sets up a public, read-only http repository on his own server.  The first then fetches from that, merges changes and pushes back to GitHub.  It also demonstrates an instance in which the Author and Committer fields can differ for a commit.
+This screencast demonstrates a distributed workflow.  It takes two personas, creating a project in GitHub and pushing to it in the first persona, then cloning that project in the second.  The second then sets up a public, read-only HTTP repository on his own server.  The first then fetches from that, merges changes and pushes back to GitHub.  It also demonstrates an instance in which the Author and Committer fields can differ for a commit.
 
 movie. c8-dist-workflow.mov
