--- a/text/s2-c02-getting-a-git-repo.textile
+++ b/text/s2-c02-getting-a-git-repo.textile
@@ -25,7 +25,7 @@ Many times you will be _cloning_ a repository, however.  This means that you are
 
 note.  A clone is, for all intents and purposes, a full backup.  If the server that you cloned from has a hard disk failure or something equally catastrophic, you can basically take any of the clones and stick it back up there when the server is restored without anyone really the worse for wear.
 
-In order to do this, you simply need a URL that has a Git repository hosted there, which can be over _http_, _https_, _ssh_ or the special _git_ protocol. We will use the public hosted repository of the simple library I mentioned at the beginning of the book.
+In order to do this, you simply need a URL that has a Git repository hosted there, which can be over HTTP, HTTPS, SSH or the special _git_ protocol. We will use the public hosted repository of the simple library I mentioned at the beginning of the book.
 
 shell. git clone git://github.com/schacon/simplegit.git
 
