--- a/text/s2-c03-normal-workflow.textile
+++ b/text/s2-c03-normal-workflow.textile
@@ -54,23 +54,23 @@ Let's say we add a new function to our @lib/simplegit.rb@ file, add a new task t
 
 shell. interactive-mode1.txt
 
-We can see that we have two files that are being tracked (have been added at some point in the past) that have been modified.  We cannot yet see our new TODO file, though.  To add that, type '4' for the 'add untracked' option and hit enter.
+We can see that we have two files that are being tracked (have been added at some point in the past) that have been modified.  We cannot yet see our new TODO file, though.  To add that, type @4@ for the @add untracked@ option and hit @Enter@.
 
 shell. interactive-mode2.txt
 
-You will see all the untracked files in your working directory.  Type the numbers of the files you want to add, or a range (ie: '1-5'), and hit enter twice when you're done. This will drop you back to the main menu.  You can then type '1' to see what your index looks like now.
+You will see all the untracked files in your working directory.  Type the numbers of the files you want to add, or a range (i.e.: @1-5@), and hit enter twice when you're done. This will drop you back to the main menu.  You can then type @1@ to see what your index looks like now.
 
 shell. interactive-mode3.txt
 
-You can see that the TODO file is now staged (in the index), but the other two are not.  Let's add the Rakefile, but not the 'lib/simplegit.rb' file and commit it. To do that, we hit '2', which lists the files we can update, type '1' and enter to add the Rakefile, then hit enter again to go back to the main menu.  Then we hit '7' to exit and run the 'git commit' command
+You can see that the TODO file is now staged (in the index), but the other two are not.  Let's add the Rakefile, but not the @lib/simplegit.rb@ file and commit it. To do that, we hit @2@, which lists the files we can update, type @1@ and enter to add the @Rakefile@, then hit enter again to go back to the main menu.  Then we hit @7@ to exit and run the @git commit@ command
 
 shell. interactive-mode4.txt
 
-The interactive shell is pretty simple and very powerful - playing with it instead of running 'git add' commands directly may help in understanding what's happening, since you can see the status of your files in the index versus the working directory more clearly.  It helps visualize that what is in your index (the 'staged' column) is what will be committed when you run 'git commit'.
+The interactive shell is pretty simple and very powerful - playing with it instead of running @git add@ commands directly may help in understanding what's happening, since you can see the status of your files in the index versus the working directory more clearly.  It helps visualize that what is in your index (the @staged@ column) is what will be committed when you run @git commit@.
 
-You can also do more complicated things, like going through all of your change patches hunk by hunk, deciding if each hunk should be applied to the next commit or not.  This means that if you've made a bunch of changes to one file, you can commit _part_ of those changes in one commit, and the rest in a second.  Try the 'patch' menu option in the Interactive Adding menu to try this out.
+You can also do more complicated things, like going through all of your change patches hunk by hunk, deciding if each hunk should be applied to the next commit or not.  This means that if you've made a bunch of changes to one file, you can commit _part_ of those changes in one commit, and the rest in a second.  Try the @patch@ menu option in the _Interactive Adding_ menu to try this out.
 
-note.  Beware of using interactive adding if you are already used to running 'git commit -a'.  If you run through the whole interactive add process and then run 'git commit -a', it will basically ignore everything you just did and just add all modified files.
+note.  Beware of using interactive adding if you are already used to running @git commit -a@.  If you run through the whole interactive add process and then run @git commit -a@, it will basically ignore everything you just did and just add all modified files.
 
 
 h4. Removing
@@ -79,16 +79,4 @@ For removing files from your tree, you can simply run:
 
 shell. git rm <filename>
   
-which will remove that file from the index (and thus from the next commit) as well as from your working directory.  On your next commit, the tree that commit points to will simply not contain that file anymore.
-
-
-
-
-
-
-
-
-
-
-
-
+This will remove that file from the index (and thus from the next commit) as well as from your working directory.  On your next commit, the tree that commit points to will simply not contain that file anymore.
