Another draft with images nearly done. Still need to add sidebars and fix some incorrectly escaped angle brackets

--- a/text/s1-c07-treeish.textile
+++ b/text/s1-c07-treeish.textile
@@ -48,7 +48,7 @@ h4. Tilde Spec
 
 code. e65s46~5 
 
-The tilde character, followed by a number, refers to the Nth generation grandparent of that commit.  To clarify from the carrot, this is the equivalent commit in carrot syntax:
+The tilde character, followed by a number, refers to the Nth generation grandparent of that commit.  To clarify from the carrot, this is the equivalent commit in caret syntax:
 
 code. e65s46^^^^^
 
