--- a/text/s1-c03-object-types.textile
+++ b/text/s1-c03-object-types.textile
@@ -22,7 +22,7 @@ It is important to note that it is the _contents_ that are stored, not the files
 
 This means that if you have two files anywhere in your project that are exactly the same, even if they have different names, Git will only store the blob once.  This also means that during repository transfers, such as clones or fetches, Git will only transfer the blob once, then expand it out into multiple files upon checkout.
 
-!vector/Blob_Expand.eps!
+!vector/Blob_Expand.eps(The contents of a blob, uncompressed)!
 
 h3. The Tree
 
@@ -51,8 +51,6 @@ Since this was my first commit, there are no parents.  If I commit a second time
 Notice how the _parent_ in that commit is the same SHA1 value of the last commit we did?  Most times a commit will only have a single parent like that, but if you merge two branches, the next commit will point to both of them.
 
 note. The current record for number of commit parents in the Linux kernel is 12 branches merged in a single commit!
-
-break. x
 
 h3. The Tag
 
